Add provider and charging for locations
